--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,4 +17,6 @@ glob = { version = "0.3.1", features = [] }
 stl_io = "0.7.0"
 las = { version = "0.8.1", features = ["laz"] }
 log = "0.4.20"
+kml = "0.8.4"
+utm = "0.1.6"
 
